# mcp-codebase-index

./: .gitignore
mcp/steering-generator/: .gitignore  README.md  pyproject.toml  quick_test.py  test_mcp.py
mcp/steering-generator-npm/: README.md  package.json
mcp/steering-generator/steering_generator/: __main__.py  analyzer.py  deep_analyzer.py  detector.py  generator.py  server.py
